Bug#20365 mysqlslap fails with error message about result sets  - Using CLIENT_MULTI_RESULTS is needed to execute stored procedures